[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvekit"
version = "0.1.0"
description = "CVE Swiss Army Knife for RHEL — kpatch, LEAPP, SAP Note cross-reference"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
    "jinja2>=3.1",
]

[project.scripts]
cvekit = "cvekit.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cvekit*"]
